# Spotify_Streamlit

./: .cache  .gitignore  Search.py  app.py  main.py  notebook.ipynb  pyproject.toml  requirements.txt  testing.ipynb
lessons/: 1-14.py
modules/: creds.py  etl.py  ploty_map.py  search.py  setup.py  state_manager.py  tickets.py
notebooks/: fiona.ipynb  notebook.ipynb  out.gpkg  split_csv.ipynb
pages/: 1_Search.py  1_top_tracks.py  other.py
