[project]
name = "streamlit-training"
version = "0.1.0"
description = ""
authors = [
    {name = "DillaKilla69",email = "donjuanbovi@yahoo.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit (>=1.43.1,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "spotipy (>=2.25.1,<3.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
