[project]
name = "streamlit-training"
version = "0.1.0"
description = ""
authors = [
    {name = "DillaKilla69",email = "donjuanbovi@yahoo.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit (>=1.43.1,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "spotipy (>=2.25.1,<3.0.0)",
    "plotly-express (>=0.4.1,<0.5.0)",
    "plotly (>=6.0.0,<7.0.0)",
    "pykernel (>=0.1.6,<0.2.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "spotifyapi (>=0.1.1,<0.2.0)",
    "ticketpy (>=1.1.2,<2.0.0)",
    "setuptools (>=76.0.0,<77.0.0)",
    "streamlit-vis-timeline (>=0.3.0,<0.4.0)",
    "charset-normalizer (>=3.4.1,<4.0.0)",
    "chardet (>=5.2.0,<6.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
